Add Mend and Newtonsoft updates.

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -62,6 +62,9 @@
         <a href="https://forallsecure.com/" target="_blank">
             <img role="listitem" aria-label="For All Secure" src="~/Images/Logos/ForAllSecure.png" alt="For All Secure" />
         </a>
+        <a href="https://www.mend.io/" target="_blank">
+            <img role="listitem" aria-label="Mend" src="~/Images/Logos/Mend.png" alt="Mend" />
+        </a>
         <a href="https://www.grammatech.com/" target="_blank">
             <img role="listitem" aria-label="GrammaTech" src="~/Images/Logos/GrammaTech.png" alt="GrammaTech" />
         </a>
