Add Contrast Security to the contributors list.

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -56,6 +56,9 @@
         The SARIF project is supported by a group of industry contributors.
     </div>
     <div id="collabSectionButtons" role="list" aria-labelledby="collabSectionTitle">
+        <a href="https://www.contrastsecurity.com/" target="_blank">
+            <img role="listitem" aria-label="Contrast" src="~/Images/Logos/Contrast.png" alt="Contrast" />
+        </a>
         <a href="https://www.sonarsource.com/" target="_blank">
             <img role="listitem" aria-label="Sonar" src="~/Images/Logos/Sonar.png" alt="Sonar" />
         </a>
