Add Visual Studio 2022 install link
Added the link to the Visual Studio 2022 version of the SARIF extension as an additional button in the Visual Studio viewer-card.

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -238,7 +238,8 @@
                 <img id="screenshot01" src="~/Images/Screenshots/VSViewer.thumbnail.png" index="0" coloration="dark" role="button" aria-labelledby="vsViewerCardTitle" alt="Visual Studio extension" width="360" height="240" />
             </div>
             <div class="viewer-buttons">
-                <button role="button" aria-label="Install VS Viewer extension" href="https://marketplace.visualstudio.com/items?itemName=WDGIS.MicrosoftSarifViewer" target="_blank" class="sarifweb-button">Install</button>
+                <button role="button" aria-label="Install VS Viewer extension" href="https://marketplace.visualstudio.com/items?itemName=WDGIS.MicrosoftSarifViewer" target="_blank" class="sarifweb-button">Install 2019</button>
+                <button role="button" aria-label="Install VS Viewer extension" href="https://marketplace.visualstudio.com/items?itemName=WDGIS.MicrosoftSarifViewer2022" target="_blank" class="sarifweb-button">Install 2022</button>
                 <button role="button" aria-label="View VS Viewer extension source code" href="https://github.com/Microsoft/sarif-visualstudio-extension/" target="_blank" class="sarifweb-button">Source</button>
             </div>
         </div>
