Add log formatting + return formatted json + new Ace themes + cleanup

--- a/src/SarifWeb/Views/Validation/Index.cshtml
+++ b/src/SarifWeb/Views/Validation/Index.cshtml
@@ -78,12 +78,14 @@
                     <ul id="utilitiesMenuThemesFlyout">
                         <li class="ui-widget-header"><div>Light</div></li>
                         <li data-value="ace/theme/chrome"><div><span class="ui-icon ui-icon-check"></span>Chrome</div></li>
+                        <li data-value="ace/theme/cloud9_day"><div><span class="ui-icon ui-icon-check"></span>Cloud9 Day</div></li>
                         <li data-value="ace/theme/clouds"><div><span class="ui-icon ui-icon-check"></span>Clouds</div></li>
                         <li data-value="ace/theme/crimson_editor"><div><span class="ui-icon ui-icon-check"></span>Crimson Editor</div></li>
                         <li data-value="ace/theme/dawn"><div><span class="ui-icon ui-icon-check"></span>Dawn</div></li>
                         <li data-value="ace/theme/dreamweaver"><div><span class="ui-icon ui-icon-check"></span>Dreamweaver</div></li>
                         <li data-value="ace/theme/eclipse"><div><span class="ui-icon ui-icon-check"></span>Eclipse</div></li>
                         <li data-value="ace/theme/github"><div><span class="ui-icon ui-icon-check"></span>GitHub</div></li>
+                        <li data-value="ace/theme/gruvbox_light_hard"><div><span class="ui-icon ui-icon-check"></span>Gruvbox Light Hard</div></li>
                         <li data-value="ace/theme/iplastic"><div><span class="ui-icon ui-icon-check"></span>IPlastic</div></li>
                         <li data-value="ace/theme/katzenmilch"><div><span class="ui-icon ui-icon-check"></span>KatzenMilch</div></li>
                         <li data-value="ace/theme/kuroir"><div><span class="ui-icon ui-icon-check"></span>Kuroir</div></li>
@@ -96,23 +98,28 @@
                         <li data-value="ace/theme/ambiance"><div><span class="ui-icon ui-icon-check"></span>Ambiance</div></li>
                         <li data-value="ace/theme/chaos"><div><span class="ui-icon ui-icon-check"></span>Chaos</div></li>
                         <li data-value="ace/theme/clouds_midnight"><div><span class="ui-icon ui-icon-check"></span>Clouds Midnight</div></li>
+                        <li data-value="ace/theme/cloud9_night"><div><span class="ui-icon ui-icon-check"></span>Cloud9 Night</div></li>
+                        <li data-value="ace/theme/cloud9_night_low_color"><div><span class="ui-icon ui-icon-check"></span>Cloud9 Low Color</div></li>
                         <li data-value="ace/theme/cobalt"><div><span class="ui-icon ui-icon-check"></span>Cobalt</div></li>
                         <li data-value="ace/theme/dracula"><div><span class="ui-icon ui-icon-check"></span>Dracula</div></li>
                         <li data-value="ace/theme/gob"><div><span class="ui-icon ui-icon-check"></span>Green on Black</div></li>
                         <li data-value="ace/theme/gruvbox"><div><span class="ui-icon ui-icon-check"></span>Gruvbox</div></li>
+                        <li data-value="ace/theme/gruvbox_dark_hard"><div><span class="ui-icon ui-icon-check"></span>Gruvbox Dark Hard</div></li>
                         <li data-value="ace/theme/idle_fingers"><div><span class="ui-icon ui-icon-check"></span>idle Fingers</div></li>
                         <li data-value="ace/theme/kr_theme"><div><span class="ui-icon ui-icon-check"></span>krTheme</div></li>
                         <li data-value="ace/theme/merbivore"><div><span class="ui-icon ui-icon-check"></span>Merbivore</div></li>
                         <li data-value="ace/theme/merbivore_soft"><div><span class="ui-icon ui-icon-check"></span>Merbivore Soft</div></li>
                         <li data-value="ace/theme/mono_industrial"><div><span class="ui-icon ui-icon-check"></span>Mono Industrial</div></li>
                         <li data-value="ace/theme/monokai"><div><span class="ui-icon ui-icon-check"></span>Monokai</div></li>
-                        <li data-value="ace/theme/pastel_on_dark"><div><span class="ui-icon ui-icon-check"></span>Pastel on dark</div></li>
+                        <li data-value="ace/theme/nord_dark"><div><span class="ui-icon ui-icon-check"></span>Nord Dark</div></li>
+                        <li data-value="ace/theme/one_dark"><div><span class="ui-icon ui-icon-check"></span>One Dark</div></li>
+                        <li data-value="ace/theme/pastel_on_dark"><div><span class="ui-icon ui-icon-check"></span>Pastel On Dark</div></li>
                         <li data-value="ace/theme/solarized_dark"><div><span class="ui-icon ui-icon-check"></span>Solarized Dark</div></li>
                         <li data-value="ace/theme/terminal"><div><span class="ui-icon ui-icon-check"></span>Terminal</div></li>
                         <li data-value="ace/theme/tomorrow_night"><div><span class="ui-icon ui-icon-check"></span>Tomorrow Night</div></li>
                         <li data-value="ace/theme/tomorrow_night_blue"><div><span class="ui-icon ui-icon-check"></span>Tomorrow Night Blue</div></li>
                         <li data-value="ace/theme/tomorrow_night_bright"><div><span class="ui-icon ui-icon-check"></span>Tomorrow Night Bright</div></li>
-                        <li data-value="ace/theme/tomorrow_night_eighties"><div><span class="ui-icon ui-icon-check"></span>Tomorrow Night 80s</div></li>
+                        <li data-value="ace/theme/tomorrow_night_eighties"><div><span class="ui-icon ui-icon-check"></span>Tomorrow Night '80s</div></li>
                         <li data-value="ace/theme/twilight"><div><span class="ui-icon ui-icon-check"></span>Twilight</div></li>
                         <li data-value="ace/theme/vibrant_ink"><div><span class="ui-icon ui-icon-check"></span>Vibrant Ink</div></li>
                     </ul>
@@ -335,7 +342,7 @@
                             // Now we know how many result locations we have for each rule, so populate the rules dropdown.
                             const options = [];
                             for (let key in rulesDictionary) {
-                                options.push("<option value='" + key + "'>" + key + " (" + rulesDictionary[key].resultKeys.length + ")</option>");
+                                options.push(`<option value='${key}'>${key}" (${rulesDictionary[key].resultKeys.length})</option>`);
                             }
 
                             // Add the rules to the drop-down and then trigger a close event.
@@ -592,16 +599,11 @@
                                 $dropForm.removeClass("is-complete");
                             }, 5000);
 
-                            var fileReader = new FileReader();
-                            fileReader.onload = function () {
-                                var inputLogContents = fileReader.result;
-
-                                setUpEditor(inputLogContents)
-                                    .then(function () {
-                                        processResults(data.resultsLogContents);
-                                    });
-                            };
-                            fileReader.readAsText($('#fileInput').prop('files')[0]);
+                            // Load the JSON as it was formatted by the validator before analysis.
+                            setUpEditor(data.inputLogContents)
+                                .then(function () {
+                                    processResults(data.resultsLogContents);
+                                });
                         } else {
                             $dropForm.addClass("is-error");
 
@@ -611,7 +613,6 @@
 
                             setTimeout(function () {
                                 // Wait a tick to let the style change take effect. Don't know why this is needed.
-                                alert(data.message);
                             }, 100);
                         }
                     },
