Update jQuery + clean up js folder

--- a/src/SarifWeb/Views/Shared/_Layout.cshtml
+++ b/src/SarifWeb/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
     <link href="~/css/Frame-Media-Tablet.css" rel="stylesheet" media="only screen and (min-width: 768px) and (max-width: 1024px)" />
     <link href="~/css/Frame-Media-Tablet-Landscape.css" rel="stylesheet" media="only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape)" />
     <script src="~/js/modernizr-2.6.2.js"></script>
-    <script src="~/js/jquery-3.6.0.min.js"></script>
-    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/jquery/jquery.min.js"></script>
+    <script src="~/js/bootstrap/bootstrap.min.js"></script>
     <script src="~/js/respond.min.js"></script>
     @RenderSection("scripts", required: false)
     <script src="~/js/Cookie.js"></script>
