--- a/src/SarifWeb/Views/Validation/Index.cshtml
+++ b/src/SarifWeb/Views/Validation/Index.cshtml
@@ -71,7 +71,7 @@
                     <label id="gitHubRulesLabel" for="gitHubRules" class="ui-widget">GitHub ingestion rules</label>
                     <br />
                     <input type="checkbox" id="advSecRules" aria-labelledby="advSecRulesLabel" title="Requirements for SARIF files uploaded to Azure DevOps Advanced Security code scanning." value="Ado" />
-                    <label id="advSecRulesLabel" for="advSecRules" class="ui-widget">ADO ingestion rules</label>
+                    <label id="advSecRulesLabel" for="advSecRules" class="ui-widget">Azure DevOps ingestion rules</label>
                 </div>
             </div>
             <ul id="utilitiesMenu">
